--- a/aaaaa/index.html
+++ b/aaaaa/index.html
@@ -14,7 +14,7 @@
         </button>
     </div>
 
-    <audio id="musica_fondo" src="designer.mpeg" loop ></audio>
+    <audio id="musica_fondo" src="designer.mpeg" loop ></audio><br>
     <div class="container">
         <div id="img">
             <img id="gif_curry" src="gifcurry.gif" alt="">
@@ -28,7 +28,8 @@
             <button id="btn_Jamas">JAMAS</button>
         </div>
     </div>
-    <script src="Aaaaaaa.js"></script>designer.mpeg
+    <script src="Aaaaaaa.js"></script>
     
 </body>
+
 </html>
